# DIABOLICAL

./: index.html  manifest.webmanifest  sw.js
.github/workflows/: deploy-pages.yml
assets/: CommandPalette-7IYufNr2.js  CommandPalette-B7QDM43p.js  CommandPalette-B9YOMFcl.js  CommandPalette-BHM8kSfs.js  CommandPalette-CVFBrP7T.js  CommandPalette-Ct5vY2yt.js  CommandPalette-Dmlzqk6R.js  CommandPalette-DtMARSy3.js  CommandPalette-DuTNEj8t.js  CommandPalette-FW_ZTUOb.js  CommandPalette-NrlvQtdo.js  CommandPalette-QwlsbuoI.js  CommandPalette-RuQciSqJ.js  CommandPalette-Yk9iB0jZ.js  CommandPalette-jMQOMvW3.js  Onboarding-9SE0zW1Z.js  Onboarding-BFsgDYeG.js  Onboarding-BU93RScR.js  Onboarding-Btb_gEGK.js  Onboarding-C-1vMpNN.js  Onboarding-C0AeG_aW.js  Onboarding-C33MLX_y.js  Onboarding-CbUm-Bkq.js  Onboarding-CqidbFHo.js  Onboarding-CwOaVKHW.js  Onboarding-D0Nq-z6Z.js  Onboarding-DpDG_EUf.js  Onboarding-JfgT4lmb.js  Onboarding-SnV-Q4xp.js  Onboarding-tyhOUX19.js  QuickCapture-5UVpCnCW.js  QuickCapture-64MI-VMJ.js  QuickCapture-By7W7N1F.js  QuickCapture-C_MQpAAl.js  QuickCapture-Ccp4aunk.js  QuickCapture-Cmr5TU8Y.js  QuickCapture-CpguZUKr.js  QuickCapture-CrVGBz1n.js  QuickCapture-CsCLPvNw.js  QuickCapture-CxaiN1-x.js  (+115 more)
rnote/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
rnote/docs/: ARCHITECTURE.md  (+4 more)
rnote/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
rnote/src-tauri/capabilities/: default.json
rnote/src-tauri/icons/: icon.icns
rnote/src-tauri/src/: lib.rs  main.rs
(+153 files in other folders)
